--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.termsconditions.co.za/" target="_blank">T&Cs</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://login.mailchimp.com/?referrer=%2Ftemplates%2Fedit%3Fid%3D10000790" target="_blank">Mailchimp</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://okfd.everlytic.net/" target="_blank">Everlytic</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://www.championshipboerewors.co.za/" target="_blank">CBW</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://github.com/99cents-sa/championship-boerewors-gallery-spa" target="_blank">CBW Github</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://99ccomm-my.sharepoint.com/:w:/g/personal/dominic_99c_co_za/EV7FbY_jbb5NlGcAK6SjRAIBcz45LunMm4tg5QRdjgNzvA?rtime=M8GMMy9x3Eg" target="_blank">CBW Tech Spec</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://99ccomm-my.sharepoint.com/:x:/r/personal/chante_99c_co_za/_layouts/15/doc2.aspx?sourcedoc=%7BECEF5BBA-BDED-4AC0-B70A-6928B38CBAF7%7D&file=Chante%25u0301%27s%20Sheet.xlsx&wdLOR=cB4877F60-B676-B142-942B-2A7D6F412484&fromShare=true&action=default&mobileredirect=true" target="_blank">Chante's Sheet Excel</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://99ccomm.sharepoint.com/" target="_blank">Intranet</a></li>
                     </div>
                 </ul>
@@ -105,38 +107,24 @@
             </li>
         </ul>
     </div>
-    <div class="d-flex justify-content-center justify-content-md-end content_body_custom">
-        <div class="row">
-            <div class="mt-3">
-                <div class="padlet-embed rounded-3"
-                    style="border:1px solid rgba(0,0,0,0.1);border-radius:2px;box-sizing:border-box;overflow:hidden;position:relative;width:100%;background:#F4F4F490; height: 352px;">
-                    <p style="padding:0;margin:0"><iframe src="https://padlet.com/embed/wopuoc8u4te2yf8w" frameborder="0"
-                            allow="camera;microphone;geolocation"
-                            style="width:100%;height:352px;padding:0;margin:0"></iframe></p>
-                    <div style="display:flex;align-items:center;justify-content:end;margin:0;height:28px"><a
-                            href="https://padlet.com?ref=embed"
+    <div class="row mx-0 px-1 justify-content-end content_body_custom">
+        <div class="col-12 col-md-6">
+            <div class="padlet-embed rounded-3"
+                style="border:1px solid rgba(0,0,0,0.1);border-radius:2px;box-sizing:border-box;overflow:hidden;position:relative;width:100%;background:#F4F4F490; height: 352px;">
+                <p style="padding:0;margin:0"><iframe src="https://padlet.com/embed/wopuoc8u4te2yf8w" frameborder="0"
+                        allow="camera;microphone;geolocation"
+                        style="width:100%;height:352px;padding:0;margin:0"></iframe></p>
+                            <div style="display:flex;align-items:center;justify-content:end;margin:0;height:28px"><a href="https://padlet.com?ref=embed"
                             style="display:block;flex-grow: 0; margin:0;border:none;padding:0;text-decoration:none" target="_blank">
                             <div style="display:flex;align-items:center;"><img src="https://padlet.net/embeds/made_with_padlet_2022.png"
-                                    width="114" height="28" style="padding:0;margin:0;background:0 0;border:none;box-shadow:none"
-                                    alt="Made with Padlet">
-                            </div>
-                        </a>
-                    </div>
+                                width="114" height="28" style="padding:0;margin:0;background:0 0;border:none;box-shadow:none"
+                                alt="Made with Padlet">
+                        </div>
+                    </a>
                 </div>
-            </div>
-            <div class="mt-3">
-                <iframe class="rounded-3"
-                    src="https://open.spotify.com/embed/album/19bQiwEKhXUBJWY6oV3KZk?utm_source=generator&theme=0"
-                    allowfullscreen
-                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
-                    loading="lazy"
-                    height="352px"
-                    width="100%">
-                </iframe>
             </div>
         </div>
     </div>
-    
     <div>
         <p class="custom_date_time" id="currentDateTime">12 May 2024, 4:13</p>
     </div>
