--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="https://www.youtube.com/" target="_blank"><img class="nav_icons_custom" src="https://i.ibb.co/qdzrVDY/youtube-1.png" alt="Youtube"></a></li>
             <li><a href="https://open.spotify.com/?flow_ctx=87223b24-5b92-4039-a055-41d208b2164a%3A1697223564" target="_blank"><img class="nav_icons_custom" src="https://i.ibb.co/zG5TTyF/spotify.png" alt="Spotify"></a></li>
             <li><a href="https://docs.google.com/spreadsheets/u/1/?pli=1" target="_blank"><img class="nav_icons_custom" src="https://i.ibb.co/C9dFkn1/sheets.png" alt="Google Sheets"></a></li>
+            <li><a href="https://outlook.office.com/mail/" target="_blank"><img class="nav_icons_custom" src="https://i.ibb.co/FJf6qYv/outlook.png" alt="99c Outlook"></a></li>
         </ul>
         <ul class="nav nav-pills justify-content-center ">
             <li class="nav-item dropdown">
