--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.championshipboerewors.co.za/" target="_blank">CBW</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://github.com/99cents-sa/championship-boerewors-gallery-spa" target="_blank">CBW Github</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://99ccomm-my.sharepoint.com/:w:/g/personal/dominic_99c_co_za/EV7FbY_jbb5NlGcAK6SjRAIBcz45LunMm4tg5QRdjgNzvA?rtime=M8GMMy9x3Eg" target="_blank">CBW Tech Spec</a></li>
-                        <li><a class="dropdown-item dropdown_item_custom" href="https://99ccomm-my.sharepoint.com/:x:/r/personal/chante_99c_co_za/_layouts/15/doc2.aspx?sourcedoc=%7BECEF5BBA-BDED-4AC0-B70A-6928B38CBAF7%7D&file=Chante%25u0301%27s%20Sheet.xlsx&wdLOR=cB4877F60-B676-B142-942B-2A7D6F412484&fromShare=true&action=default&mobileredirect=true" target="_blank">Chante's Sheet Excel</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://docs.google.com/spreadsheets/d/19Rm1yiem7yEImnZyl4aJMoaks02txFP-DzHV_e3bMTg/edit?usp=sharing" target="_blank">Chante's Sheet Google</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://99ccomm-my.sharepoint.com/personal/emile_99c_co_za/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Femile%5F99c%5Fco%5Fza%2FDocuments%2FABSA%20Mailers" target="_blank">EV Mailer Drive</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://99ccomm.sharepoint.com/" target="_blank">Intranet</a></li>
                     </div>
                 </ul>
@@ -96,6 +97,7 @@
                 <a class="nav-link dropdown-toggle nav_custom" data-bs-toggle="dropdown" href="#">Media</a>
                 <ul class="dropdown-menu dropdown_menu_custom">
                     <div class="dropdown_menu_custom_overlay">
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://n3rdmade.github.io/TBCPL/" target="_blank">Couch Potato</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://fmoviesz.to/home" target="_blank">FMovies</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://sflix.se/home" target="_blank">SFlix</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://archive.org/details/Supaidman" target="_blank">Supaidman</a></li>
