--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                         <li><a class="dropdown-item dropdown_item_custom" href="https://app.photoroom.com/create" target="_blank">Photoroom</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://doomgb.imgbb.com/" target="_blank">IMGBB</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://99ccomm.sharepoint.com/" target="_blank">AWS Skills</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://pagespeed.web.dev/" target="_blank">Page Speed Insights</a></li>
                     </div>
                 </ul>
             </li>
