--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                 <ul class="dropdown-menu dropdown_menu_custom">
                     <div class="dropdown_menu_custom_overlay">
                         <li><a class="dropdown-item dropdown_item_custom" href="https://n3rdmade.github.io/TBCPL/" target="_blank">Couch Potato</a></li>
-                        <li><a class="dropdown-item dropdown_item_custom" href="https://fmoviesz.to/home" target="_blank">FMovies</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://n3rdmade.github.io/TBCPL/" target="_blank">Popcorn Movies M3U8</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://www.opensubtitles.org/en/search/subs" target="_blank">Subtitles</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://sflix.se/home" target="_blank">SFlix</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://archive.org/details/Supaidman" target="_blank">Supaidman</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://bandcamp.com/" target="_blank">Bandcamp</a></li>
