--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                         <li><a class="dropdown-item dropdown_item_custom" href="https://docs.google.com/spreadsheets/d/19Rm1yiem7yEImnZyl4aJMoaks02txFP-DzHV_e3bMTg/edit?usp=sharing" target="_blank">Chante's Sheet Google</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://99ccomm-my.sharepoint.com/personal/emile_99c_co_za/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Femile%5F99c%5Fco%5Fza%2FDocuments%2FABSA%20Mailers" target="_blank">EV Mailer Drive</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://99ccomm.sharepoint.com/" target="_blank">Intranet</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://docs.google.com/document/d/1_m6RpiwzyvhiFNx-FlEpOBv2JSioLv0Mjuzf9z1oDOQ/edit?tab=t.0" target="_blank">Mischka</a></li>
                     </div>
                 </ul>
             </li>
