--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.codecademy.com/" target="_blank">Code Academy</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://cssgradient.io/" target="_blank">CSS Gradient</a></li>
-                        <li><a class="dropdown-item dropdown_item_custom" href="https://uiverse.io/" target="_blank">UI Verser</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://uiverse.io/" target="_blank">UI Verse</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://github.com/MattMcAdams/CSS-Boilerplate/blob/master/index.css" target="_blank">CSS Boilerplate Ref 1</a></li>
                     </div>
                 </ul>
