--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <a class="nav-link dropdown-toggle nav_custom" data-bs-toggle="dropdown" href="#">Code</a>
                 <ul class="dropdown-menu dropdown_menu_custom">
                     <div class="dropdown_menu_custom_overlay">
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://vscode.dev/" target="_blank">VS Code Online</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://github.com/HelpImBlind" target="_blank">Github/HelpI'mBlind</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.w3schools.com/" target="_blank">W3 Schools</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.w3docs.com/" target="_blank">W3 Docs</a></li>
@@ -62,6 +63,7 @@
                         <li><a class="dropdown-item dropdown_item_custom" href="https://cssgradient.io/" target="_blank">CSS Gradient</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://uiverse.io/" target="_blank">UI Verse</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://github.com/MattMcAdams/CSS-Boilerplate/blob/master/index.css" target="_blank">CSS Boilerplate Ref 1</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://javascript.info/" target="_blank">JS.Info</a></li>
                     </div>
                 </ul>
             </li>
@@ -80,6 +82,7 @@
                     <div class="dropdown_menu_custom_overlay">
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.figma.com/file/bdgaNueIr1SvNEJhBhGpVi/Main-Canvas---Adrian?type=design&node-id=1826-2&mode=design&t=9to0HmcXfbOM9bMI-0" target="_blank">Figma Online</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://tinypng.com/" target="_blank">Tiny PNG</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://teams.microsoft.com/v2/" target="_blank">*Teams</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.ilovepdf.com/" target="_blank">I LOVE PDF</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.iloveimg.com/" target="_blank">I LOVE IMG</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.imgtools.co/" target="_blank">IMG Tools.co</a></li>
