--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <div class="dropdown_menu_custom_overlay">
                         <li><a class="dropdown-item dropdown_item_custom" href="https://vscode.dev/" target="_blank">VS Code Online</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://github.com/HelpImBlind" target="_blank">Github/HelpI'mBlind</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://download-directory.github.io/" target="_blank">Github Download Directory</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.w3schools.com/" target="_blank">W3 Schools</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.w3docs.com/" target="_blank">W3 Docs</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.w3schools.com/colors/colors_picker.asp" target="_blank">W3 Colour Picker</a></li>
