--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <ul class="list-group list-group-numbered flex-wrap flex-row justify-content-center mb-2 mb-md-0">
             <li><a href="https://workbook.99c.co.za/" target="_blank"><img class="nav_icons_custom" src="https://i.ibb.co/FK1fbGj/Workbook.png" alt="Workbook"></a></li>
             <li><a href="https://author.prod.shopritelabs.co.za/libs/granite/core/content/login.html?resource=%2F&$$login$$=%24%24login%24%24&j_reason=unknown&j_reason_code=unknown" target="_blank"><img class="nav_icons_custom" src="https://i.ibb.co/g6w3M7K/AEM.png" alt="AEM"></a></li>
-            <li><a href="https://web.whatsapp.com/" target="_blank"><img class="nav_icons_custom" src="https://i.ibb.co/gJTj4XC/whatsapp.png" alt="Whatsapp"></a></li>
             <li><a href="https://www.youtube.com/" target="_blank"><img class="nav_icons_custom" src="https://i.ibb.co/qdzrVDY/youtube-1.png" alt="Youtube"></a></li>
             <li><a href="https://open.spotify.com/?flow_ctx=87223b24-5b92-4039-a055-41d208b2164a%3A1697223564" target="_blank"><img class="nav_icons_custom" src="https://i.ibb.co/zG5TTyF/spotify.png" alt="Spotify"></a></li>
             <li><a href="https://docs.google.com/spreadsheets/u/1/?pli=1" target="_blank"><img class="nav_icons_custom" src="https://i.ibb.co/C9dFkn1/sheets.png" alt="Google Sheets"></a></li>
             <li><a href="https://outlook.office.com/mail/" target="_blank"><img class="nav_icons_custom" src="https://i.ibb.co/FJf6qYv/outlook.png" alt="99c Outlook"></a></li>
+            <li><a href="https://teams.microsoft.com/v2/" target="_blank"><img class="nav_icons_custom" src="https://i.ibb.co/xSfgC5Ww/ms-teams.png" alt="MS Teams"></a></li>
         </ul>
         <ul class="nav nav-pills justify-content-center ">
             <li class="nav-item dropdown">
@@ -49,32 +49,33 @@
                 </ul>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle nav_custom" data-bs-toggle="dropdown" href="#">Code</a>
+                <a class="nav-link dropdown-toggle nav_custom" data-bs-toggle="dropdown" href="#">Resources #1</a>
                 <ul class="dropdown-menu dropdown_menu_custom">
                     <div class="dropdown_menu_custom_overlay">
                         <li><a class="dropdown-item dropdown_item_custom" href="https://vscode.dev/" target="_blank">VS Code Online</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://codepen.io/pen/" target="_blank">Code Pen</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://chatgpt.com/?model=text-davinci-002-render-sha" target="_blank">Chat GPT</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://github.com/HelpImBlind" target="_blank">Github/HelpI'mBlind</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://download-directory.github.io/" target="_blank">Github Download Directory</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://developer.mozilla.org/en-US/" target="_blank">MDN Docs</a></li>
-                        <li><a class="dropdown-item dropdown_item_custom" href="https://www.w3schools.com/" target="_blank">W3 Schools</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.w3docs.com/" target="_blank">W3 Docs</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://www.w3schools.com/" target="_blank">W3 Schools</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.w3schools.com/colors/colors_picker.asp" target="_blank">W3 Colour Picker</a></li>
-                        <li><a class="dropdown-item dropdown_item_custom" href="https://codepen.io/pen/" target="_blank">Code Pen</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.codecademy.com/" target="_blank">Code Academy</a></li>
-                        <li><a class="dropdown-item dropdown_item_custom" href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
-                        <li><a class="dropdown-item dropdown_item_custom" href="https://cssgradient.io/" target="_blank">CSS Gradient</a></li>
-                        <li><a class="dropdown-item dropdown_item_custom" href="https://uiverse.io/" target="_blank">UI Verse</a></li>
-                        <li><a class="dropdown-item dropdown_item_custom" href="https://github.com/MattMcAdams/CSS-Boilerplate/blob/master/index.css" target="_blank">CSS Boilerplate Ref 1</a></li>
-                        <li><a class="dropdown-item dropdown_item_custom" href="https://javascript.info/" target="_blank">JS.Info</a></li>
                     </div>
                 </ul>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle nav_custom" data-bs-toggle="dropdown" href="#">AI Tools</a>
+                <a class="nav-link dropdown-toggle nav_custom" data-bs-toggle="dropdown" href="#">Resources #2</a>
                 <ul class="dropdown-menu dropdown_menu_custom">
                     <div class="dropdown_menu_custom_overlay">
-                        <li><a class="dropdown-item dropdown_item_custom" href="https://chatgpt.com/?model=text-davinci-002-render-sha" target="_blank">Chat GPT</a></li>
-                        <li><a class="dropdown-item dropdown_item_custom" href="https://companion.99c.co.za/" target="_blank">AI Companion / Kevin</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://javascript.info/" target="_blank">JS.Info</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://tailwindcss.com/" target="_blank">Tailwind</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://nerdcave.com/tailwind-cheat-sheet" target="_blank">Tailwind CS</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://cssgradient.io/" target="_blank">CSS Gradient</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://uiverse.io/" target="_blank">UI Verse</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://github.com/MattMcAdams/CSS-Boilerplate/blob/master/index.css" target="_blank">CSS Boilerplate Ref 1</a></li>
                     </div>
                 </ul>
             </li>
@@ -91,7 +92,8 @@
                         <li><a class="dropdown-item dropdown_item_custom" href="https://pdf2png.com/" target="_blank">PDF to PNG</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://tools.pdf24.org/en/" target="_blank">PDF24 Tools</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.ginifab.com/feeds/pms/color_picker_from_image.php" target="_blank">Colour Picker</a></li>
-                        <li><a class="dropdown-item dropdown_item_custom" href="https://www.convertcsv.com/json-to-csv.htm" target="_blank">JSON Converter</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://www.convertcsv.com/json-to-csv.htm" target="_blank">JSON TO CSV</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://www.convertcsv.com/csv-to-html.htm" target="_blank">CSV to HTML</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.pngwing.com/" target="_blank">PNG Wing</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.deviantart.com/" target="_blank">Deviant Art</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.flaticon.com/" target="_blank">Flaticon</a></li>
@@ -110,7 +112,6 @@
                         <li><a class="dropdown-item dropdown_item_custom" href="https://tpb.party/" target="_blank">The Pirate Bay</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.utorrent.com/" target="_blank">uTorrent</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.opensubtitles.org/en/search/subs" target="_blank">Subtitles</a></li>
-                        <li><a class="dropdown-item dropdown_item_custom" href="https://sflix.se/home" target="_blank">SFlix</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://archive.org/details/Supaidman" target="_blank">Supaidman</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://bandcamp.com/" target="_blank">Bandcamp</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://anix.to/home" target="_blank">Anix</a></li>
@@ -120,24 +121,6 @@
                 </ul>
             </li>
         </ul>
-    </div>
-    <div class="row mx-0 px-1 justify-content-end content_body_custom">
-        <div class="col-12 col-md-6">
-            <div class="padlet-embed rounded-3"
-                style="border:1px solid rgba(0,0,0,0.1);border-radius:2px;box-sizing:border-box;overflow:hidden;position:relative;width:100%;background:#F4F4F490; height: 352px;">
-                <p style="padding:0;margin:0"><iframe src="https://padlet.com/embed/wopuoc8u4te2yf8w" frameborder="0"
-                        allow="camera;microphone;geolocation"
-                        style="width:100%;height:352px;padding:0;margin:0"></iframe></p>
-                            <div style="display:flex;align-items:center;justify-content:end;margin:0;height:28px"><a href="https://padlet.com?ref=embed"
-                            style="display:block;flex-grow: 0; margin:0;border:none;padding:0;text-decoration:none" target="_blank">
-                            <div style="display:flex;align-items:center;"><img src="https://padlet.net/embeds/made_with_padlet_2022.png"
-                                width="114" height="28" style="padding:0;margin:0;background:0 0;border:none;box-shadow:none"
-                                alt="Made with Padlet">
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
     </div>
     <div>
         <p class="custom_date_time" id="currentDateTime">12 May 2024, 4:13</p>
