--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.pngwing.com/" target="_blank">PNG Wing</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.deviantart.com/" target="_blank">Deviant Art</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://www.flaticon.com/" target="_blank">Flaticon</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://favicon.io/" target="_blank">Favicon</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://app.photoroom.com/create" target="_blank">Photoroom</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://doomgb.imgbb.com/" target="_blank">IMGBB</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://99ccomm.sharepoint.com/" target="_blank">AWS Skills</a></li>
