--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                         <li><a class="dropdown-item dropdown_item_custom" href="https://sass-lang.com/" target="_blank">SASS</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://cssgradient.io/" target="_blank">CSS Gradient</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://uiverse.io/" target="_blank">UI Verse</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://ui.shadcn.com/" target="_blank">ShadCN</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://github.com/MattMcAdams/CSS-Boilerplate/blob/master/index.css" target="_blank">CSS Boilerplate Ref 1</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://cssgridgarden.com/" target="_blank">Grid Garden</a></li>
                     </div>
                 </ul>
             </li>
