--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                         <li><a class="dropdown-item dropdown_item_custom" href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://tailwindcss.com/" target="_blank">Tailwind</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://nerdcave.com/tailwind-cheat-sheet" target="_blank">Tailwind CS</a></li>
+                        <li><a class="dropdown-item dropdown_item_custom" href="https://flyonui.com/" target="_blank">FlyonUI</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://sass-lang.com/" target="_blank">SASS</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://cssgradient.io/" target="_blank">CSS Gradient</a></li>
                         <li><a class="dropdown-item dropdown_item_custom" href="https://uiverse.io/" target="_blank">UI Verse</a></li>
